--- a/EspooLearnWordsAndroid/app/src/main/AndroidManifest.xml
+++ b/EspooLearnWordsAndroid/app/src/main/AndroidManifest.xml
@@ -1,21 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.espoolearnwordsandroid">
+    package="com.example.newsamplesqlite">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:theme="@style/Theme.NewSampleSQLite"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.EspooLearnWordsAndroid">
-        <activity android:name=".NewPolishWordActivity"></activity>
-        <activity android:name=".MainActivity">
+        android:supportsRtl="true">
+
+        <activity android:name="com.example.newsamplesqlite.SampleMaterialActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <activity
+            android:name="com.example.newsamplesqlite.TransitionEditActivity"
+            android:label="@string/title_activity_transition_edit"
+            android:configChanges="orientation|screenSize"
+            android:parentActivityName="com.example.newsamplesqlite.SampleMaterialActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.newsamplesqlite.SampleMaterialActivity" />
+        </activity>
+
+        <activity
+            android:name="com.example.newsamplesqlite.TransitionAddActivity"
+            android:label="@string/title_activity_transition_add"
+            android:configChanges="orientation|screenSize"
+            android:parentActivityName="com.example.newsamplesqlite.SampleMaterialActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.newsamplesqlite.SampleMaterialActivity" />
+        </activity>
+
+    </application>
 </manifest>
