--- a/EspooLearnWordsQt/android-sources/AndroidManifest.xml
+++ b/EspooLearnWordsQt/android-sources/AndroidManifest.xml
@@ -19,4 +19,8 @@
 <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
 <!-- %%INSERT_PERMISSIONS -->
     <!-- %%INSERT_FEATURES -->
+<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.BIND_VPN_SERVICE"/>
 </manifest>
