--- a/M0002/SimulatorQt/gallery/CMakeLists.txt
+++ b/M0002/SimulatorQt/gallery/CMakeLists.txt
@@ -21,68 +21,77 @@ qt_add_qml_module(Baboon_bricks
     URI gallery
     NO_RESOURCE_TARGET_PATH
     QML_FILES
-        "+Material/ToolBar.qml"
-        "ToolBar.qml"
-        "gallery.qml"
-        "pages/BusyIndicatorPage.qml"
-        "pages/ButtonPage.qml"
-        "pages/CheckBoxPage.qml"
-        "pages/ComboBoxPage.qml"
-        "pages/DelayButtonPage.qml"
-        "pages/DelegatePage.qml"
-        "pages/DialPage.qml"
-        "pages/DialogPage.qml"
-        "pages/EmulatorM0002Page.qml"
-        "pages/FramePage.qml"
-        "pages/GroupBoxPage.qml"
-        "pages/PageIndicatorPage.qml"
-        "pages/ProgressBarPage.qml"
-        "pages/RadioButtonPage.qml"
-        "pages/RangeSliderPage.qml"
-        "pages/ScrollBarPage.qml"
-        "pages/ScrollIndicatorPage.qml"
-        "pages/ScrollablePage.qml"
-        "pages/SliderPage.qml"
-        "pages/SpinBoxPage.qml"
-        "pages/StackViewPage.qml"
-        "pages/SwipeViewPage.qml"
-        "pages/SwitchPage.qml"
-        "pages/TabBarPage.qml"
-        "pages/TCPTerminalPage.qml"
-        "pages/TextAreaPage.qml"
-        "pages/TextFieldPage.qml"
-        "pages/ToolTipPage.qml"
-        "pages/TumblerPage.qml"
-        "pages/UDPTerminalPage.qml"
+    "+Material/ToolBar.qml"
+    "ToolBar.qml"
+    "gallery.qml"
+    "pages/BusyIndicatorPage.qml"
+    "pages/ButtonPage.qml"
+    "pages/CheckBoxPage.qml"
+    "pages/ComboBoxPage.qml"
+    "pages/DelayButtonPage.qml"
+    "pages/DelegatePage.qml"
+    "pages/DevicesInNetworkPage.qml"
+    "pages/DialPage.qml"
+    "pages/DialogPage.qml"
+    "pages/EmulatorM0002Page.qml"
+    "pages/FramePage.qml"
+    "pages/GroupBoxPage.qml"
+    "pages/PageIndicatorPage.qml"
+    "pages/ProgressBarPage.qml"
+    "pages/RadioButtonPage.qml"
+    "pages/RangeSliderPage.qml"
+    "pages/ScrollBarPage.qml"
+    "pages/ScrollIndicatorPage.qml"
+    "pages/ScrollablePage.qml"
+    "pages/SliderPage.qml"
+    "pages/SpinBoxPage.qml"
+    "pages/StackViewPage.qml"
+    "pages/SwipeViewPage.qml"
+    "pages/SwitchPage.qml"
+    "pages/TabBarPage.qml"
+    "pages/TCPTerminalPage.qml"
+    "pages/TextAreaPage.qml"
+    "pages/TextFieldPage.qml"
+    "pages/ToolTipPage.qml"
+    "pages/TumblerPage.qml"
+    "pages/UDPTerminalPage.qml"
     RESOURCES
-        "icons/gallery/20x20/back.png"
-        "icons/gallery/20x20/drawer.png"
-        "icons/gallery/20x20/menu.png"
-        "icons/gallery/20x20@2/back.png"
-        "icons/gallery/20x20@2/drawer.png"
-        "icons/gallery/20x20@2/menu.png"
-        "icons/gallery/20x20@3/back.png"
-        "icons/gallery/20x20@3/drawer.png"
-        "icons/gallery/20x20@3/menu.png"
-        "icons/gallery/20x20@4/back.png"
-        "icons/gallery/20x20@4/drawer.png"
-        "icons/gallery/20x20@4/menu.png"
-        "icons/gallery/index.theme"
-        "images/arrow.png"
-        "images/arrow@2x.png"
-        "images/arrow@3x.png"
-        "images/arrow@4x.png"
-        "images/arrows.png"
-        "images/arrows@2x.png"
-        "images/arrows@3x.png"
-        "images/arrows@4x.png"
-        "images/baboon.png"
-        "images/qt-logo.png"
-        "images/qt-logo@2x.png"
-        "images/qt-logo@3x.png"
-        "images/qt-logo@4x.png"
-        "qmldir"
-        "qtquickcontrols2.conf"
+    "icons/gallery/20x20/back.png"
+    "icons/gallery/20x20/drawer.png"
+    "icons/gallery/20x20/menu.png"
+    "icons/gallery/20x20/show_details.png"
+    "icons/gallery/20x20/hide_details.png"
+    "icons/gallery/20x20@2/back.png"
+    "icons/gallery/20x20@2/drawer.png"
+    "icons/gallery/20x20@2/menu.png"
+    "icons/gallery/20x20@2/show_details.png"
+    "icons/gallery/20x20@2/hide_details.png"
+    "icons/gallery/20x20@3/back.png"
+    "icons/gallery/20x20@3/drawer.png"
+    "icons/gallery/20x20@3/menu.png"
+    "icons/gallery/20x20@3/show_details.png"
+    "icons/gallery/20x20@3/hide_details.png"
+    "icons/gallery/20x20@4/back.png"
+    "icons/gallery/20x20@4/drawer.png"
+    "icons/gallery/20x20@4/menu.png"
+    "icons/gallery/20x20@4/show_details.png"
+    "icons/gallery/20x20@3/hide_details.png"
+    "icons/gallery/index.theme"
+    "images/arrow.png"
+    "images/arrow@2x.png"
+    "images/arrow@3x.png"
+    "images/arrow@4x.png"
+    "images/arrows.png"
+    "images/arrows@2x.png"
+    "images/arrows@3x.png"
+    "images/arrows@4x.png"
+    "images/baboon.png"
+    "images/qt-logo.png"
+    "images/qt-logo@2x.png"
+    "images/qt-logo@3x.png"
+    "images/qt-logo@4x.png"
+    "qmldir"
+    "qtquickcontrols2.conf"
 )
 
 target_link_libraries(Baboon_bricks PUBLIC
