--- a/M0002/firmware/PlatformIO/client/M0002 client/platformio.ini
+++ b/M0002/firmware/PlatformIO/client/M0002 client/platformio.ini
@@ -12,3 +12,5 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+lib_deps = esphome/ESPAsyncTCP-esphome@^2.0.0
+monitor_speed = 115200
