--- a/M0002/SimulatorQt/gallery/CMakeLists.txt
+++ b/M0002/SimulatorQt/gallery/CMakeLists.txt
@@ -70,6 +70,8 @@ qt_add_qml_module(Baboon_bricks
     "pages/ToolTipPage.qml"
     "pages/TumblerPage.qml"
     "pages/UDPTerminalPage.qml"
+    "pages/my_bricks/BrickDelegate.qml"
+    "pages/my_bricks/SectionDelegate.qml"
     RESOURCES
     "icons/gallery/20x20/back.png"
     "icons/gallery/20x20/drawer.png"
@@ -102,7 +104,11 @@ qt_add_qml_module(Baboon_bricks
     "images/arrows@4x.png"
     "images/baboon.png"
     "images/config.svg"
+    "images/connected_icon.svg"
+    "images/disconnected_icon.svg"
     "images/forward.svg"
+    "images/go-forward.svg"
+    "images/go-forward2.svg"
     "images/qt-logo.png"
     "images/qt-logo@2x.png"
     "images/qt-logo@3x.png"
