--- a/M0002/firmware/PlatformIO/client/M0002 client/platformio.ini
+++ b/M0002/firmware/PlatformIO/client/M0002 client/platformio.ini
@@ -13,9 +13,10 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 lib_deps = 
-	esphome/ESPAsyncTCP-esphome@^2.0.0
 	vshymanskyy/Preferences@^2.1.0
 	paulstoffregen/OneWire@^2.3.7
 	milesburton/DallasTemperature@^3.11.0
-monitor_speed = 115200
-
+	me-no-dev/ESPAsyncTCP@^1.2.2
+;monitor_speed = 115200
+monitor_speed = 3000000
+upload_speed = 3000000
