--- a/M0002/SimulatorQt/gallery/CMakeLists.txt
+++ b/M0002/SimulatorQt/gallery/CMakeLists.txt
@@ -119,13 +119,17 @@ qt_add_qml_module(Baboon_bricks
     "images/arrows@4x.png"
     "images/baboon.png"
     "images/config.svg"
+    "images/close.svg"
     "images/connected_icon.svg"
     "images/disconnected_icon.svg"
+    "images/dashboard.svg"
     "images/temp_connected.svg"
     "images/temp_disconnected.svg"
+    "images/temperature.svg"
     "images/forward.svg"
     "images/go-forward.svg"
     "images/go-forward2.svg"
+    "images/humidity.svg"
     "images/qt-logo.png"
     "images/qt-logo@2x.png"
     "images/qt-logo@3x.png"
