--- a/M0002/SimulatorQt/gallery/CMakeLists.txt
+++ b/M0002/SimulatorQt/gallery/CMakeLists.txt
@@ -148,6 +148,7 @@ qt_add_qml_module(Baboon_bricks
     QML_FILES pages/list_view/M0002/M0002ControllerExt.qml
     QML_FILES pages/list_view/common/BrickTitle.qml
     QML_FILES pages/list_view/T0002/T0002MainPage.qml
+    QML_FILES pages/list_view/common/NetworkSettings.qml
 )
 
 qt6_add_statecharts(Baboon_bricks
