--- a/firmware/bricks_firmware/PlatformIO/client/M0002 client/platformio.ini
+++ b/firmware/bricks_firmware/PlatformIO/client/M0002 client/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+lib_extra_dirs = ${PROJECT_DIR}/../../../../libs
 lib_deps = 
 	vshymanskyy/Preferences@^2.1.0
 	paulstoffregen/OneWire@^2.3.7
