--- a/firmware/AspooBricksLib/AspooBricks/platformio.ini
+++ b/firmware/AspooBricksLib/AspooBricks/platformio.ini
@@ -13,3 +13,5 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 lib_extra_dirs = ${PROJECT_DIR}/../../libs
+monitor_speed = 3000000
+upload_speed = 3000000
