--- a/M0002/SimulatorQt/gallery/CMakeLists.txt
+++ b/M0002/SimulatorQt/gallery/CMakeLists.txt
@@ -130,9 +130,11 @@ qt_add_qml_module(Baboon_bricks
     "images/disconnected_icon.svg"
     "images/dashboard.svg"
     "images/device_type.svg"
+    "images/id.svg"
     "images/ip_address.svg"
     "images/t0002_connected.svg"
     "images/t0002_disconnected.svg"
+    "images/tcp_port.svg"
     "images/temp_connected.svg"
     "images/temp_disconnected.svg"
     "images/temperature.svg"
@@ -145,6 +147,7 @@ qt_add_qml_module(Baboon_bricks
     "images/qt-logo@2x.png"
     "images/qt-logo@3x.png"
     "images/qt-logo@4x.png"
+    "images/udp_port.svg"
     "images/wifi.svg"
     "scxml/EmulatorM0002States.scxml"
     "scxml/PseudoDNSStates.scxml"
