--- a/firmware/bricks_firmware/PlatformIO/client/M0002 client/.vscode/settings.json
+++ b/firmware/bricks_firmware/PlatformIO/client/M0002 client/.vscode/settings.json
@@ -51,6 +51,10 @@
         "stdexcept": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "unordered_set": "cpp",
+        "iostream": "cpp",
+        "istream": "cpp",
+        "sstream": "cpp"
     }
 }
