komit przed porzadkami

--- a/firmware/bricks_firmware/PlatformIO/client/M0002 client/platformio.ini
+++ b/firmware/bricks_firmware/PlatformIO/client/M0002 client/platformio.ini
@@ -18,6 +18,6 @@ lib_deps =
 	paulstoffregen/OneWire@^2.3.7
 	milesburton/DallasTemperature@^3.11.0
 	me-no-dev/ESPAsyncTCP@^1.2.2
-;monitor_speed = 115200
+	thomasfredericks/Bounce2@^2.72
 monitor_speed = 3000000
 upload_speed = 3000000
