--- a/firmware/AspooBricksLib/KiKoBricks/platformio.ini
+++ b/firmware/AspooBricksLib/KiKoBricks/platformio.ini
@@ -13,5 +13,8 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 lib_extra_dirs = ${PROJECT_DIR}/../../libs
+lib_deps =
+    #HalLib= ${PROJECT_DIR}/../../libs
+    #HalLib=symlink://../../libs/hallib
 monitor_speed = 3000000
 upload_speed = 3000000
